[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/background.png" type="Texture" id=1]
[ext_resource path="res://UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UserInterface/theme.tres" type="Theme" id=3]
[ext_resource path="res://Lobby/InputManager.gd" type="Script" id=4]
[ext_resource path="res://Scenes/LocalStartButton.gd" type="Script" id=5]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 128.0
margin_right = -24.0
margin_bottom = -30.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://Scenes/MainScene.tscn"

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 34.0
margin_top = 17.0
margin_right = -37.0
margin_bottom = 104.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneButton3" parent="ButtonContainer" instance=ExtResource( 2 )]
margin_right = 172.0
margin_bottom = 87.0
size_flags_horizontal = 3
text = "Back"
next_scene_path = "res://Scenes/Menu.tscn"

[node name="Space" type="Panel" parent="ButtonContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 172.0
margin_right = 1036.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="StartButton" type="Button" parent="ButtonContainer"]
margin_left = 1036.0
margin_right = 1209.0
margin_bottom = 87.0
size_flags_horizontal = 3
text = "Start"
script = ExtResource( 5 )

[connection signal="button_up" from="ButtonContainer/StartButton" to="ButtonContainer/StartButton" method="_on_button_up"]
